kubernetes/sisyphus-client/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sisyphus-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sisyphus-client
  template:
    metadata:
      name: sisyphus-client
      labels:
        app: sisyphus-client
    spec:
      containers:
        - name: sisyphus-client
          image: registry.digitalocean.com/sisyphus-registry/sisyphus-client:477dc04
          ports:
            - containerPort: 80
