kubernetes/sisyphus-client/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sisyphus-client-service
spec:
  selector:
    app: sisyphus-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
